refactor: 추천 후보 목록 노출 축소